STY: whitespace fix

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ a {
   position: relative;
   z-index: 1;
 }
+
 #hero::after {
   content: "";
   position: absolute;
@@ -44,10 +45,10 @@ a {
 }
 
 #hero .hero {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 50px;
-    justify-content: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 50px;
+  justify-content: flex-start;
 }
 
 #hero h1 {
@@ -83,7 +84,7 @@ a {
   animation-delay: 1s;
 }
 #hero h1:nth-child(1) span {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 
 #hero h1:nth-child(2) span {
